# logamPackage

./: .gitignore  config  logArchives.py  logConfig  logConfig.py  logGenerator.py  logMessageFormat.py  logValidationsFormats.py  project.toml  pyproject.toml  readme.md
loGAM/: __init__.py  logArchives.py  logConfig.py  logGenerator.py  logValidationsFormats.py
