[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loGAM"
version = "0.0.1"
authors = [
  { name="Pedro Gonsalves", email="pedro_gonsalves@hotmail.com" },
]
description = "Loggs for smalls projects"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pedrohgoncalvess/logamPackage"
"Bug Tracker" = "https://github.com/pedrohgoncalvess/logamPackage/issues"